# parental-control-app

./: .gitignore  CMakeLists.txt  GEMINI.md  README.md  fix_includes.ps1
cpr/: api.h  auth.h  bearer.h  body.h  body_view.h  buffer.h  cookies.h  cpr.h  curl_container.h  curlholder.h  error.h  file.h  interceptor.h  interface.h  multiperform.h  parameters.h  payload.h  proxyauth.h  response.h  session.h  ssl_ctx.h  ssl_options.h  user_agent.h  util.h
include/: ConfigManager.h  Keylogger.h  TelegramBot.h  obfuscate.h
src/: ConfigManager.cpp  Keylogger.cpp  TelegramBot.cpp  main.cpp
